// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapBanner renders correctly with exchange link 1`] = `
<Swap__Wrapper>
  <Swap__Column>
    <Swap__LargeText>
      <FormattedMessage
        defaultMessage="Trading Your Crypto Doesn't Mean Trading Away Control."
        id="scenes.home.banners.swap.title_1"
        values={Object {}}
      />
    </Swap__LargeText>
    <Swap__MediumText>
      <FormattedMessage
        defaultMessage="Trade crypto straight from your Wallet."
        id="scenes.home.banners.swap.subtitle_1"
        values={Object {}}
      />
    </Swap__MediumText>
  </Swap__Column>
  <Swap__Column
    hiddenOnMobile={true}
  >
    <Swap__BackgroundImage
      name="swap-dashboard-right"
    />
  </Swap__Column>
  <Swap__Column>
    <withRouter(LinkContainer)
      to="/swap"
    >
      <Swap__GetStartedButton>
        <FormattedMessage
          defaultMessage="Swap Now"
          id="scenes.home.banners.swap.swapnow"
          values={Object {}}
        />
      </Swap__GetStartedButton>
    </withRouter(LinkContainer)>
  </Swap__Column>
</Swap__Wrapper>
`;

exports[`SwapBanner renders correctly with getstarted button 1`] = `
<Swap__Wrapper>
  <Swap__Column>
    <Swap__LargeText>
      <FormattedMessage
        defaultMessage="Trading Your Crypto Doesn't Mean Trading Away Control."
        id="scenes.home.banners.swap.title_1"
        values={Object {}}
      />
    </Swap__LargeText>
    <Swap__MediumText>
      <FormattedMessage
        defaultMessage="Trade crypto straight from your Wallet."
        id="scenes.home.banners.swap.subtitle_1"
        values={Object {}}
      />
    </Swap__MediumText>
  </Swap__Column>
  <Swap__Column
    hiddenOnMobile={true}
  >
    <Swap__BackgroundImage
      name="swap-dashboard-right"
    />
  </Swap__Column>
  <Swap__Column>
    <Swap__GetStartedButton>
      <FormattedMessage
        defaultMessage="Get Started"
        id="scenes.home.banners.swap.started"
        values={Object {}}
      />
    </Swap__GetStartedButton>
  </Swap__Column>
</Swap__Wrapper>
`;

exports[`SwapBanner renders null w/o showBanner 1`] = `
<Swap__Wrapper>
  <Swap__Column>
    <Swap__LargeText>
      <FormattedMessage
        defaultMessage="Trading Your Crypto Doesn't Mean Trading Away Control."
        id="scenes.home.banners.swap.title_1"
        values={Object {}}
      />
    </Swap__LargeText>
    <Swap__MediumText>
      <FormattedMessage
        defaultMessage="Trade crypto straight from your Wallet."
        id="scenes.home.banners.swap.subtitle_1"
        values={Object {}}
      />
    </Swap__MediumText>
  </Swap__Column>
  <Swap__Column
    hiddenOnMobile={true}
  >
    <Swap__BackgroundImage
      name="swap-dashboard-right"
    />
  </Swap__Column>
  <Swap__Column>
    <withRouter(LinkContainer)
      to="/swap"
    >
      <Swap__GetStartedButton>
        <FormattedMessage
          defaultMessage="Swap Now"
          id="scenes.home.banners.swap.swapnow"
          values={Object {}}
        />
      </Swap__GetStartedButton>
    </withRouter(LinkContainer)>
  </Swap__Column>
</Swap__Wrapper>
`;
